--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
     "nodemon": "^2.0.5",
     "redis": "^3.0.2"
